--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rust-i2c"
-version = "0.1.0"
-authors = ["Ryan Plauche <ryan@kubos.co>"]
+version = "0.2.0"
+authors = ["Ryan Plauche <ryan@kubos.co>", "Patrick Oppel <patrick.oppel94@gmail.com>"]
 edition = "2018"
 
 [dependencies]
