--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ name = "i2c-rs"
 version = "0.2.0"
 authors = ["Ryan Plauche <ryan@kubos.co>", "Patrick Oppel <patrick.oppel94@gmail.com>"]
 edition = "2018"
+repository = "https://github.com/Cube-OS/i2c-rs"
 
 [dependencies]
 i2c-linux = "0.1"
-hal-stream = { git = "ssh://git@github.com/Cube-OS/hal-stream"}
+hal-stream = { version = "0.1.13", registry = "cube-os" }
