--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,17 +28,17 @@ jobs:
         echo "
         [index_config]
         remote_url = 'https://github.com/Cube-OS/crates.git'
-        https_username = '${{ secrets.GITHUB_USERNAME }}'
+        https_username = 'x-access-token'
         https_password = '${{ secrets.GITHUB_TOKEN }}'
         branch = 'main'
         " > ./ktra.toml
         cargo run
+        cd ..
 
     - name: Create user for Ktra and login
       run: |
         TOKEN=$(curl -X POST -H 'Content-Type: application/json' -d '{"password":"PASSWORD"}' http://localhost:8000/ktra/api/v1/new_user/ALICE)
         cargo login --registry=ktra $TOKEN
-        cd ..
 
     - name: Build and test
       run: |
