--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,14 @@ jobs:
 
     # Create empty directory crates
     - name: Create crates directory
-      run: mkdir crates
+      run: |
+        mkdir crates
+        cd crates
+        git "Initial
+        touch README.md
+        git add README.md
+        git commit -m "Initial commit"
+        cd ..        
 
     # Checkout Ktra
     - name: Checkout Ktra
