git init not initial

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         mkdir crates
         cd crates
-        git "Initial
+        git init
         touch README.md
         git add README.md
         git commit -m "Initial commit"
