--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,8 @@ jobs:
         mkdir crates
         cd crates
         git init
+        git config user.email "you@example.com"
+        git config user.name "Your Name"
         touch README.md
         git add README.md
         git commit -m "Initial commit"
