--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,7 @@ jobs:
         git init
         git config user.email "you@example.com"
         git config user.name "Your Name"
+        git remote origin add "https://github.com/Cube-OS/crates.git"
         touch README.md
         git add README.md
         git commit -m "Initial commit"
