--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,20 +44,14 @@ jobs:
         branch = 'main'
         " > ./ktra/ktra.toml
         cd ktra
-        cargo run &
+        cargo build
+        ./target/debug/ktra &
         cd ..
-
-    # Wait for Ktra to start
-    - name: Wait for Ktra to start
-      run: |
-        until $(curl --output /dev/null --silent --head --fail http://localhost:8000); do
-          printf '.'
-          sleep 5
-        done
 
     # Create new user for Ktra
     - name: Create user for Ktra and login
       run: |
+        sleep 5
         TOKEN=$(curl -X POST -H 'Content-Type: application/json' -d '{"password":"PASSWORD"}' http://localhost:8000/ktra/api/v1/new_user/ALICE)
         cargo login --registry=ktra $TOKEN
 
