--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,12 +16,22 @@ jobs:
         toolchain: stable
         override: true   
 
+    # Checkout Code
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    # Get registry name and repo link
+    - name: Get registry and repo
+      run: |
+        REGISTRY=$(grep -oP '\[registries\]\n\K.*?(?=\s)' .cargo/config.toml)
+        REPO=$(grep -oP 'index = \K.*' .cargo/config.toml | tr -d '"' | awk -F/ '{print $(NF-1)"/"$NF}' | sed 's/.git$//')
+
     # Checkout Registry
     - name: Checkout Registry
       uses: actions/checkout@v2
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        repository: Cube-OS/crates
+        repository: ${{ env.REPO }}
         path: crates       
 
     # Checkout Ktra
@@ -46,18 +56,13 @@ jobs:
         cd ktra
         cargo build
         ./target/debug/ktra &
-        cd ..
+        cd ..    
 
-    # Create new user for Ktra
-    - name: Create user for Ktra and login
+    - name: Create user fortra and login
       run: |
         sleep 5
         TOKEN=$(curl -X POST -H 'Content-Type: application/json' -d '{"password":"PASSWORD"}' http://localhost:8000/ktra/api/v1/new_user/ALICE)
-        cargo login --registry=ktra $TOKEN
-
-    # Checkout this repository
-    - name: Checkout code
-      uses: actions/checkout@v2
+        cargo login --registry=$REGISTRY $TOKEN
 
     # Build and test
     - name: Build and test
