change registry url to https

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,8 @@ jobs:
       run: |
         REGISTRY=$(grep -oP '\[registries\]\n\K.*?(?=\s)' .cargo/config.toml)
         REPO=$(grep -oP 'index = \K.*' .cargo/config.toml | tr -d '"' | awk -F/ '{print $(NF-1)"/"$NF}' | sed 's/.git$//')
+        echo "::set-env name=REGISTRY::$REGISTRY"
+        echo "::set-env name=REPO::$REPO"
 
     # Checkout Registry
     - name: Checkout Registry
