change regex structure

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,10 +23,10 @@ jobs:
     # Get registry name and repo link
     - name: Get registry and repo
       run: |
-        REGISTRY=$(grep -oP '\[registries\]\n\K.*?(?=\s)' .cargo/config.toml)
-        REPO=$(grep -oP 'index = \K.*' .cargo/config.toml | tr -d '"' | awk -F/ '{print $(NF-1)"/"$NF}' | sed 's/.git$//')
-        echo "::set-env name=REGISTRY::$REGISTRY"
-        echo "::set-env name=REPO::$REPO"
+        REGISTRY=$(awk -F'=' '/\[registries\]/ {getline; print $1}' .cargo/config.toml | tr -d ' ')
+        REPO=$(grep -oP 'index = \K.*' .cargo/config.toml | tr -d '"' | awk -F/ '{print $(NF-1)"/"$NF}' | sed 's/\.git.*//')
+        # echo $REGISTRY
+        # echo $REPO
 
     # Checkout Registry
     - name: Checkout Registry
