check for Registry

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,6 +64,7 @@ jobs:
       run: |
         sleep 5
         TOKEN=$(curl -X POST -H 'Content-Type: application/json' -d '{"password":"PASSWORD"}' http://localhost:8000/ktra/api/v1/new_user/ALICE)
+        echo ${{ env.REGISTRY }}
         cargo login --registry=${{ env.REGISTRY }} $TOKEN
 
     # Build and test
