--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,16 +61,12 @@ jobs:
         ./target/debug/ktra &
         cd ..    
 
-    - name: Create user fortra and login
+    - name: Create user for ktra and login, then build and test
       run: |
         sleep 5
         TOKEN=$(curl -X POST -H 'Content-Type: application/json' -d '{"password":"PASSWORD"}' http://localhost:8000/ktra/api/v1/new_user/ALICE)
         echo ${{ env.REGISTRY }}
         cargo login --registry=${{ env.REGISTRY }} $TOKEN
-
-    # Build and test
-    - name: Build and test
-      run: |
         cargo build --release
         cargo test
 
