--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,6 +67,10 @@ jobs:
         TOKEN=$(curl -X POST -H 'Content-Type: application/json' -d '{"password":"PASSWORD"}' http://localhost:8000/ktra/api/v1/new_user/ALICE)
         echo ${{ env.REGISTRY }}
         cargo login --registry=${{ env.REGISTRY }} $TOKEN
+
+    # Build and test
+    - name: Build and test
+      run: |
         cargo build --release
         cargo test
 
