--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,7 +73,7 @@ jobs:
     - name: Create user for ktra and login, then build and test
       run: |
         sleep 15
-        TOKEN=$(curl -X POST -H 'Content-Type: application/json' -d '{"password":"PASSWORD"}' http://localhost:8000/ktra/api/v1/new_user/ALICE)
+        TOKEN=$(curl -X POST -H 'Content-Type: application/json' -d '{"password":"PASSWORD"}' http://127.0.0.1:8000/ktra/api/v1/new_user/ALICE)
         echo ${{ env.REGISTRY }}
         cargo login --registry=${{ env.REGISTRY }} $TOKEN
 
