--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
     - name: Setup Rust
-      uses: actions-rs/toolchain@v2
+      uses: dtolnay/rust-toolchain@v1
       with:
         toolchain: stable
         override: true   
