--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,7 @@ jobs:
 
     - name: Create user for ktra and login, then build and test
       run: |
-        ./target/debug/ktra > ktra_output.txt 2>&1 &
+        ./target/debug/ktra
         cd ..
         sleep 5
         TOKEN=$(curl -X POST -H 'Content-Type: application/json' -d '{"password":"PASSWORD"}' http://localhost:8000/ktra/api/v1/new_user/ALICE)
