--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,7 @@ jobs:
         ' > ./ktra/ktra.toml
         cd ktra
         cargo build
-        ./target/debug/ktra
+        ./target/debug/ktra > ktra_output.txt 2>&1 &
         cd ..
 
     - name: Create user for ktra and login, then build and test
