--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,8 @@ jobs:
       uses: actions/checkout@v4
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        repository: ${{ env.REPO }}
+        # repository: ${{ env.REPO }}
+        repository: Cube-OS/crates
         path: registry       
 
     # Checkout Ktra
