--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,6 +71,7 @@ jobs:
     - name: Create user for ktra and login, then build and test
       run: |        
         sleep 5
+        cd ${{ github.event.repository.name }}
         TOKEN=$(curl -X POST -H 'Content-Type: application/json' -d '{"password":"PASSWORD"}' http://localhost:8000/ktra/api/v1/new_user/ALICE)
         echo ${{ env.REGISTRY }}
         cargo login --registry=${{ env.REGISTRY }} "$TOKEN"
