--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,7 @@ jobs:
         ' > ./ktra/ktra.toml
         cd ktra
         find "../registry/" -type d
-        cat "../registry/ha/l-/*"
+        cat ../registry/ha/l-/*
         cargo build
         ./target/debug/ktra > ktra_output.txt 2>&1 &
         cd ..
