--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     steps:
     - name: Setup Rust
@@ -39,10 +39,10 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         repository: ${{ env.REPO }}
-        # ref: main
-        ref: ${{ github.event.pull_request.head.sha }}
+        ref: main
+        # ref: ${{ github.event.pull_request.head.sha }}
         path: registry
-        fetch-depth: 1
+        # fetch-depth: 1
 
     # Checkout Ktra
     - name: Checkout Ktra
