--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
     # Run Ktra
     - name: Build Ktra
       run: |
-        echo "${{ secrets.GITHUB_TOKEN }}" > ./ktra/github_token.txt
+        echo "${{ secrets.GITHUB_TOKEN }}" > ${{ github.workspace }}/ktra/github_token.txt
         echo '
         [index_config]
         remote_url = "https://github.com/Cube-OS/crates.git"
@@ -63,7 +63,7 @@ jobs:
         https_username = "x-access-token"
         https_password = "'${{ secrets.GITHUB_TOKEN }}'"
         branch = "main"
-        token_path = "./github_token.txt"
+        token_path = "${{ github.workspace }}/ktra/github_token.txt"
         ' > ./ktra/ktra.toml
         cd ktra
         cargo build
