--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,6 +67,7 @@ jobs:
         ' > ${{ github.workspace }}/ktra/ktra.toml
         cd ktra
         cargo build --release
+        find "./*"
 
     - name: Run Ktra
       run: |
