--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
         token_path = "${{ github.workspace }}/ktra/github_token.txt"
         ' > ${{ github.workspace }}/ktra/ktra.toml
         cd ktra
-        cargo build --release
+        cargo build --release ${{ github.workspace }}/ktra/target/release/ktra
         find ${{ github.workspace }}/ktra/*
 
     - name: Run Ktra
