--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,9 @@ jobs:
         token_path = "${{ github.workspace }}/ktra/github_token.txt"
         ' > ${{ github.workspace }}/ktra/ktra.toml
         cd ktra
-        cargo build --release ${{ github.workspace }}/ktra/target/release/ktra
+        ls -la
+        cargo build --release
+        sleep 10
         find ${{ github.workspace }}/ktra/*
 
     - name: Run Ktra
