--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,6 +67,7 @@ jobs:
         ' > ${{ github.workspace }}/ktra/ktra.toml
         cd ktra
         cargo build --release > build_output.txt 2>&1
+        find ${{ github.workspace }} -name ktra
 
     - name: Run Ktra
       run: |
@@ -75,7 +76,6 @@ jobs:
     - name: Create user for ktra and login, then build and test
       run: |        
         sleep 5
-        curl localhost:8000
         cd ${{ github.event.repository.name }}
         TOKEN=$(curl -X POST -H 'Content-Type: application/json' -d '{"password":"PASSWORD"}' http://localhost:8000/ktra/api/v1/new_user/ALICE | jq -r '.token')
         echo ${{ env.REGISTRY }}
