--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
         token_path = "${{ github.workspace }}/ktra/github_token.txt"
         ' > ${{ github.workspace }}/ktra/ktra.toml
         cd ktra
-        cargo build --release > build_output.txt 2>&1
+        cargo build --release > build_output.txt 2>&1 || echo "Build failed"
         find ${{ github.workspace }} -name ktra
 
     - name: Run Ktra
@@ -85,7 +85,9 @@ jobs:
       continue-on-error: true
 
     - name: print ktra build_output
-      run: cat ${{ github.workspace }}/ktra/build_output.txt
+      run: |
+        cat ${{ github.workspace }}/ktra/build_output.txt
+        cat ${{ github.workspace }}/ktra_output.txt
     
       # Package
     - name: package
